interflop-backend-mcaquad 1/2

--- a/src/backends/interflop-mca/Makefile.am
+++ b/src/backends/interflop-mca/Makefile.am
@@ -1,9 +1,48 @@
-lib_LTLIBRARIES = libinterflop_mca.la
-libinterflop_mca_la_SOURCES = interflop_mca.c ../../common/logger.c ../../common/options.c
-libinterflop_mca_la_CFLAGS = -DBACKEND_HEADER="interflop_mca"
-if WALL_CFLAGS
-libinterflop_mca_la_CFLAGS += -Wall -Wextra
+ACLOCAL_AMFLAGS=-I m4
+lib_LTLIBRARIES = libinterflop_mca.la libinterflop_mca_no-tls.la
+
+if ENABLE_LTO
+LTO_FLAGS = -flto
+else
+LTO_FLAGS =
 endif
-libinterflop_mca_la_LDFLAGS = -lm
-libinterflop_mca_la_LIBADD = ../../common/rng/libvfc_rng.la
-library_includedir =$(includedir)/
+
+if ENABLE_WARNINGS
+WARNING_FLAGS = -Wall -Wextra -Wno-varargs
+else
+WARNING_FLAGS = 
+endif
+
+# Backend version with TLS enabled
+libinterflop_mca_la_SOURCES = interflop_mca.c
+libinterflop_mca_la_CFLAGS = \
+    -I@INTERFLOP_INCLUDEDIR@/ \
+    -fno-stack-protector \
+    -DRNG_THREAD_SAFE \
+    $(LTO_FLAGS) -Og \
+    $(WARNING_FLAGS)
+libinterflop_mca_la_LDLAGS = $(LTO_FLAGS) -Og
+
+libinterflop_mca_la_LIBADD = \
+    @INTERFLOP_LIBDIR@/libinterflop_rng.la \
+    @INTERFLOP_LIBDIR@/libinterflop_fma.la \
+    @INTERFLOP_LIBDIR@/libinterflop_logger.la \
+    @INTERFLOP_LIBDIR@/libinterflop_stdlib.la
+
+# Backend version with TLS disabled
+libinterflop_mca_no_tls_la_SOURCES = interflop_mca.c
+libinterflop_mca_no_tls_la_CFLAGS = \
+    -I@INTERFLOP_INCLUDEDIR@/ \
+    -fno-stack-protector \
+    $(LTO_FLAGS) -Og \
+    $(WARNING_FLAGS)
+libinterflop_mca_no_tls_la_LDLAGS = $(LTO_FLAGS) -Og
+
+libinterflop_mca_no_tls_la_LIBADD = \
+    @INTERFLOP_LIBDIR@/libinterflop_rng.la \
+    @INTERFLOP_LIBDIR@/libinterflop_fma.la \
+    @INTERFLOP_LIBDIR@/libinterflop_logger.la \
+    @INTERFLOP_LIBDIR@/libinterflop_stdlib.la
+
+includesdir=$(includedir)/interflop
+includes_HEADERS= interflop_mca.h
