--- a/src/vfcwrapper/Makefile.am
+++ b/src/vfcwrapper/Makefile.am
@@ -1,7 +1,8 @@
 
 include_HEADERS=vfcwrapper.c
 vfcwrapper.c: main.c hashset.c
-	@echo "// vfcwrapper.c is automatically generated" > vfcwrapper.c
+	@cat ../../config.h | grep 'LLVM_BINDIR' > vfcwrapper.c
+	@echo "// vfcwrapper.c is automatically generated" >> vfcwrapper.c
 	@echo "// do not modify this file directly" >> vfcwrapper.c
 	@cat main.c funcinstr.c >> vfcwrapper.c
 
