Add missing config file in configure and fix default prefix

--- a/configure.ac
+++ b/configure.ac
@@ -204,6 +204,7 @@ AC_CONFIG_FILES([Makefile
                  src/libvfcinstrument/Makefile
                  src/libvfcfuncinstrument/Makefile
                  src/vfcwrapper/Makefile
+                 src/backends/Makefile
                  tests/Makefile
                  tests/paths.sh
                 ])
