--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,12 +1,11 @@
 name: docker
 
 on:
+  workflow_dispatch:
   push:
     branches: [ '*' ]
   pull_request:
     branches: [ '*' ]
-
-
 
 jobs:
   docker:
