--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -13,6 +13,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: verificarlo
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build and export to Docker
@@ -22,4 +27,4 @@ jobs:
           load: true
       - name: Test
         run: |
-          docker run --rm "make -C /build/verificarlo installcheck"
+          docker run --rm verificarlo -c "make -C /build/verificarlo installcheck"
