Add missing tags

--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           context: .
           load: true
+          tags: ${{ env.TEST_TAG }}
       - name: Test
         run: |
           docker run --rm ${{ env.TEST_TAG }} -c "make -C /build/verificarlo installcheck"
