--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -1,12 +1,15 @@
 name: docker
 
 on:
+  workflow_dispatch:
   push:
     branches: [ '*' ]
   pull_request:
     branches: [ '*' ]
 
-
+env:
+  TEST_TAG: verificarlo/verificarlo:test
+  LATEST_TAG: verificarlo/verificarlo:latest
 
 jobs:
   docker:
@@ -21,6 +24,7 @@ jobs:
         with:
           context: .
           load: true
+          tags: ${{ env.TEST_TAG }}
       - name: Test
         run: |
-          docker run --rm "make -C /build/verificarlo installcheck"
+          docker run --rm ${{ env.TEST_TAG }} /bin/bash -c "make -C /build/verificarlo installcheck"
