Remove interflop-install.sh script and do installation at Verficarlo make stage (pre-hook)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,11 @@
 ACLOCAL_AMFLAGS=-I m4
+
+all: interflop-stdlib-install $(SUBDIRS)
+
+interflop-stdlib-install:
+	make -C src/interflop-stdlib
+	make -C src/interflop-stdlib install
+
 SUBDIRS=src/
 
 dist_bin_SCRIPTS=verificarlo verificarlo-c verificarlo-f verificarlo-c++
@@ -44,7 +51,11 @@ installcheck:
 	fi
 
 # clean-local is a clean dependency of autotool clean target
-clean-local: cleantests
+clean-local: cleanstdlib cleantests
+
+cleanstdlib:
+# Clean interflop-stdlib directory
+	cd src/interflop-stdlib && make clean && cd ../..
 
 cleantests:
 # Clean tests directory
