--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -82,7 +82,7 @@ jobs:
             gcc: 9
     runs-on: ${{ matrix.os }}
     env:
-      LOCAL_TEST_TAG: ${TEST_TAG}-llvm${{ matrix.llvm }}
+      LOCAL_TEST_TAG: ${{ env.TEST_TAG }}-llvm-${{ matrix.llvm }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
