--- a/src/interflop-stdlib/Makefile.am
+++ b/src/interflop-stdlib/Makefile.am
@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS= -I m4
-SUBDIRS=rng prng fma hashmap iostream
+SUBDIRS=rng fma hashmap iostream
 lib_LTLIBRARIES = libinterflop_stdlib.la
 
 if ENABLE_LTO
@@ -31,16 +31,11 @@ nobase_headers_HEADERS= \
 	iostream/logger.h \
 	rng/vfc_rng.h \
 	rng/xoroshiro128.h \
-	prng/vr_rand.h \
-	prng/tinymt64.h \
-	prng/xoshiro.hxx \
 	fma/interflop_fma.h \
-	fma/vr_fma.hxx \
 	common/float_const.h \
 	common/float_struct.h \
 	common/float_utils.h \
 	common/generic_builtin.h \
-	common/quadmath-imp.h \
 	common/options.h \
 	hashmap/vfc_hashmap.h
 
@@ -49,6 +44,5 @@ m4_DATA = \
 	m4/ax_interflop_stdlib.m4 \
 	m4/ax_warnings.m4 \
 	m4/ax_lto.m4 \
-	m4/ax_intrinsic_fma.m4 \
 	m4/ax_interflop_rng.m4
 
