Remove ADDR2LINE inclusion since it is handled by the configure

--- a/src/vfcwrapper/Makefile.am
+++ b/src/vfcwrapper/Makefile.am
@@ -1,7 +1,7 @@
 
 include_HEADERS=vfcwrapper.c
 vfcwrapper.c: main.c hashset.c
-	@cat ../../config.h | grep 'ADDR2LINE_PATH' > vfcwrapper.c
+	@rm -f vfcwrapper.c
 	@echo "// vfcwrapper.c is automatically generated" >> vfcwrapper.c
 	@echo "// do not modify this file directly" >> vfcwrapper.c
 	@cat main.c funcinstr.c >> vfcwrapper.c
