--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -51,6 +51,7 @@ jobs:
   docker:
     if: github.event_name == 'pull_request'
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu:20.04
