--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -87,11 +87,11 @@ jobs:
           - os: ubuntu:24.04
             llvm: 17
             gcc: 9
-            file: Dockerfile.ubuntu-24.04
+            file: Dockerfile_ubuntu-24.04
           - os: ubuntu:24.04
             llvm: 18
             gcc: 9
-            file: Dockerfile.ubuntu-24.04
+            file: Dockerfile_ubuntu-24.04
     runs-on: ubuntu-22.04
     env:
       TEST_TAG: verificarlo/verificarlo:test-llvm-${{ matrix.llvm }}
