--- a/.github/workflows/docker-ci.yml
+++ b/.github/workflows/docker-ci.yml
@@ -84,6 +84,7 @@ jobs:
           - os: ubuntu:24.04
             llvm: 16
             gcc: 9
+            file: Dockerfile_ubuntu-24.04
           - os: ubuntu:24.04
             llvm: 17
             gcc: 9
